--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,17 +26,23 @@
         app:layout_constraintTop_toTopOf="@id/loginBackButton"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/loginBackButton"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/loginBar"
+        app:layout_constraintLeft_toLeftOf="parent">
     <TextView
         android:id="@+id/loginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
         android:layout_marginLeft="48dp"
         android:text="Log in"
         android:textSize="70sp"
         android:textColor="@color/white"
         android:fontFamily="@font/robotomedium"
-        app:layout_constraintTop_toBottomOf="@id/loginBackButton"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
     <TextView
         android:id="@+id/loginWelcomeText"
@@ -56,11 +62,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="48dp"
         android:background="@drawable/background_radius_26_white"
         android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/loginWelcomeText">
+        app:layout_constraintTop_toBottomOf="@id/loginWelcomeText"
+        app:layout_constraintBottom_toTopOf="@id/loginFindPasswordButton">
 
         <TextView
             android:layout_width="wrap_content"
@@ -116,8 +124,8 @@
         android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="44dp"
-        android:layout_marginLeft="44dp"
+        android:layout_marginRight="68dp"
+        android:layout_marginLeft="68dp"
         android:background="@drawable/background_radius_40_object"
         android:text="Log in"
         android:textSize="30sp"
@@ -129,18 +137,19 @@
         app:layout_constraintBottom_toBottomOf="@id/loginBox"
         app:layout_constraintLeft_toLeftOf="@id/loginBox"/>
     <TextView
+        android:id="@+id/loginFindPasswordButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:text="find password"
         android:textSize="15sp"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/loginButton"
+        android:fontFamily="@font/robotobold"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <View
-        android:id="@+id/welcomeBar"
+        android:id="@+id/loginBar"
         android:layout_width="180dp"
         android:layout_height="5dp"
         android:layout_marginBottom="18dp"
