--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,162 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.account.LoginActivity"
-    android:background="@color/primary">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageButton
-        android:id="@+id/loginBackButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="24dp"
-        android:text="sign up"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/robotomedium"
-        app:layout_constraintTop_toTopOf="@id/loginBackButton"
-        app:layout_constraintRight_toRightOf="parent"/>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.bakinapplication.viewmodel.LoginViewModel" />
+
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/loginBackButton"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/loginBar"
-        app:layout_constraintLeft_toLeftOf="parent">
-    <TextView
-        android:id="@+id/loginTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="48dp"
-        android:text="Log in"
-        android:textSize="70sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/robotomedium"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-    <TextView
-        android:id="@+id/loginWelcomeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="welcome to Java"
-        android:textSize="20sp"
-        android:textColor="#bebebe"
-        android:fontFamily="@font/notosanskrr"
-        android:includeFontPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/loginTitle"
-        app:layout_constraintLeft_toLeftOf="@id/loginTitle"/>
+        android:layout_height="match_parent"
+        tools:context=".ui.account.LoginActivity"
+        android:background="@color/primary">
 
-    <LinearLayout
-        android:id="@+id/loginBox"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="48dp"
-        android:background="@drawable/background_radius_26_white"
-        android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/loginWelcomeText"
-        app:layout_constraintBottom_toTopOf="@id/loginFindPasswordButton">
-
-        <TextView
+        <ImageButton
+            android:id="@+id/loginBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginLeft="20dp"
-            android:text="E-mail"
-            android:textSize="25sp"
-            android:textColor="#bebebe"
-            android:fontFamily="@font/robotomedium"
-            />
+            android:layout_marginTop="65dp"
+            android:layout_marginLeft="24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:hint="example@gmail.com"
-            android:textSize="25sp"
-            android:textColor="#3d3d3d"
-            android:textColorHint="#6BBEBEBE"
-            android:backgroundTint="#6BBEBEBE"
-            android:fontFamily="@font/robotomedium"
-            />
         <TextView
+            android:id="@+id/loginSignUpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="password"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:textSize="25sp"
-            android:textColor="#bebebe"
+            android:layout_marginRight="24dp"
+            android:text="sign up"
+            android:textSize="20sp"
+            android:textColor="@color/white"
             android:fontFamily="@font/robotomedium"
-            />
+            app:layout_constraintTop_toTopOf="@id/loginBackButton"
+            app:layout_constraintRight_toRightOf="parent" />
 
-        <EditText
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="65dp"
-            android:layout_marginLeft="20dp"
-            android:hint="press your password"
-            android:textSize="25sp"
-            android:textColor="#3d3d3d"
-            android:textColorHint="#6BBEBEBE"
-            android:backgroundTint="#6BBEBEBE"
-            android:fontFamily="@font/robotomedium"
-            />
-    </LinearLayout>
-    <TextView
-        android:id="@+id/loginButton"
-        android:gravity="center"
-        android:padding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="68dp"
-        android:layout_marginLeft="68dp"
-        android:background="@drawable/background_radius_40_object"
-        android:text="Log in"
-        android:textSize="30sp"
-        android:textColor="@color/primary"
-        android:fontFamily="@font/robotobold"
-        android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/loginBox"
-        app:layout_constraintRight_toRightOf="@id/loginBox"
-        app:layout_constraintBottom_toBottomOf="@id/loginBox"
-        app:layout_constraintLeft_toLeftOf="@id/loginBox"/>
-    <TextView
-        android:id="@+id/loginFindPasswordButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="find password"
-        android:textSize="15sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/robotobold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintTop_toTopOf="@id/loginBackButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/loginBar"
+            app:layout_constraintLeft_toLeftOf="parent">
+
+            <TextView
+                android:id="@+id/loginTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="48dp"
+                android:text="Log in"
+                android:textSize="70sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/robotomedium"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <TextView
+                android:id="@+id/loginWelcomeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="welcome to Java"
+                android:textSize="20sp"
+                android:textColor="#bebebe"
+                android:fontFamily="@font/notosanskrr"
+                android:includeFontPadding="false"
+                app:layout_constraintTop_toBottomOf="@id/loginTitle"
+                app:layout_constraintLeft_toLeftOf="@id/loginTitle" />
+
+            <LinearLayout
+                android:id="@+id/loginBox"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="48dp"
+                android:layout_marginBottom="50dp"
+                android:layout_marginLeft="48dp"
+                android:background="@drawable/background_radius_26_white"
+                android:elevation="5dp"
+                app:layout_constraintTop_toBottomOf="@id/loginWelcomeText"
+                app:layout_constraintBottom_toTopOf="@id/loginFindPasswordButton">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="60dp"
+                    android:layout_marginLeft="20dp"
+                    android:text="nickname"
+                    android:textSize="25sp"
+                    android:textColor="#bebebe"
+                    android:fontFamily="@font/robotomedium" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:hint="nickname"
+                    android:text="@={viewModel.nickname}"
+                    android:textSize="25sp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#6BBEBEBE"
+                    android:backgroundTint="#6BBEBEBE"
+                    android:inputType="text"
+                    android:fontFamily="@font/robotomedium" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="password"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:textSize="25sp"
+                    android:textColor="#bebebe"
+                    android:fontFamily="@font/robotomedium" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="65dp"
+                    android:layout_marginLeft="20dp"
+                    android:hint="password"
+                    android:text="@={viewModel.password}"
+                    android:textSize="25sp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#6BBEBEBE"
+                    android:backgroundTint="#6BBEBEBE"
+                    android:inputType="textPassword"
+                    android:fontFamily="@font/robotomedium" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/loginButton"
+                android:gravity="center"
+                android:padding="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="68dp"
+                android:layout_marginLeft="68dp"
+                android:background="@drawable/background_radius_40_object"
+                android:text="Log in"
+                android:textSize="30sp"
+                android:textColor="@color/primary"
+                android:fontFamily="@font/robotobold"
+                android:elevation="5dp"
+                app:layout_constraintTop_toBottomOf="@id/loginBox"
+                app:layout_constraintRight_toRightOf="@id/loginBox"
+                app:layout_constraintBottom_toBottomOf="@id/loginBox"
+                app:layout_constraintLeft_toLeftOf="@id/loginBox" />
+
+            <TextView
+                android:id="@+id/loginFindPasswordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="find password"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/robotobold"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/loginBar"
+            android:layout_width="180dp"
+            android:layout_height="5dp"
+            android:layout_marginBottom="18dp"
+            android:background="@drawable/background_radius_20_white"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <View
-        android:id="@+id/loginBar"
-        android:layout_width="180dp"
-        android:layout_height="5dp"
-        android:layout_marginBottom="18dp"
-        android:background="@drawable/background_radius_20_white"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
