--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,154 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.RecipeActivity"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools">
 
-<androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.bakinapplication.viewmodel.RecipeViewModel" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.main.RecipeActivity"
+        android:background="@color/white">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.main.RecipeActivity"
-            android:background="#ececec">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/recipeThumbnailImage"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="match_parent">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginLeft="24dp"
-                app:cardCornerRadius="18dp"
-                android:backgroundTint="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent">
-
-                <ImageView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="1dp"
-                    android:src="@drawable/ic_backbutton"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginRight="24dp"
-                app:cardCornerRadius="18dp"
-                android:backgroundTint="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
-                <ImageView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="1dp"/>
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="270dp"
-                android:background="@drawable/background_top_radius_30_white"
-                android:elevation="5dp"
-                app:layout_constraintTop_toTopOf="@id/recipeThumbnailImage"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <TextView
-                    android:id="@+id/recipeTitleText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginLeft="24dp"
-                    android:text="Title"
-                    android:textSize="30sp"
-                    android:textColor="@color/primary"
-                    android:fontFamily="@font/robotomedium"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-
-                <TextView
-                    android:id="@+id/recipeIngredientTitleText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginLeft="24dp"
-                    android:text="재료"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/notosanskrb"
-                    android:includeFontPadding="false"
-                    app:layout_constraintTop_toBottomOf="@id/recipeTitleText"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:orientation="horizontal"
-                    android:id="@+id/recipeIngredientRecycler"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="24dp"
-                    android:layout_marginLeft="24dp"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintTop_toBottomOf="@id/recipeIngredientTitleText"
-                    tools:listitem="@layout/item_recipe_ingredient"/>
+                    android:layout_height="match_parent"
+                    tools:context=".ui.main.RecipeActivity"
+                    android:background="#ececec">
 
-                <TextView
-                    android:id="@+id/recipeDescribeText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginLeft="36dp"
-                    android:text="레시피 설명"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/notosanskrm"
-                    android:includeFontPadding="false"
-                    app:layout_constraintTop_toBottomOf="@id/recipeIngredientRecycler"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
+                    <ImageView
+                        android:id="@+id/recipeThumbnailImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/recipeOrderTitleText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginLeft="24dp"
-                    android:text="Recipe"
-                    android:textSize="24sp"
-                    android:textColor="@color/primary"
-                    android:fontFamily="@font/robotomedium"
-                    app:layout_constraintTop_toBottomOf="@id/recipeDescribeText"
-                    app:layout_constraintLeft_toLeftOf="parent"/>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginLeft="24dp"
+                        app:cardCornerRadius="18dp"
+                        android:backgroundTint="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:listitem="@layout/itme_recipe_order"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/recipeOrderTitleText" />
+                        <ImageView
+                            android:id="@+id/recipeBackButton"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="1dp"
+                            android:src="@drawable/ic_backbutton" />
+                    </androidx.cardview.widget.CardView>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginRight="24dp"
+                        app:cardCornerRadius="18dp"
+                        android:backgroundTint="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+                        <ImageView
+                            android:id="@+id/recipeProfileImage"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="1dp" />
+                    </androidx.cardview.widget.CardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="270dp"
+                        android:background="@drawable/background_top_radius_30_white"
+                        android:elevation="5dp"
+                        app:layout_constraintTop_toTopOf="@id/recipeThumbnailImage"
+                        app:layout_constraintBottom_toBottomOf="parent">
+
+                        <TextView
+                            android:id="@+id/recipeTitleText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="30dp"
+                            android:layout_marginLeft="24dp"
+                            android:text="@{viewModel.recipe.name}"
+                            android:textSize="30sp"
+                            android:textColor="@color/primary"
+                            android:fontFamily="@font/robotomedium"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent" />
+
+                        <TextView
+                            android:id="@+id/recipeIngredientTitleText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            android:layout_marginLeft="24dp"
+                            android:text="재료"
+                            android:textSize="16sp"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/notosanskrb"
+                            android:includeFontPadding="false"
+                            app:layout_constraintTop_toBottomOf="@id/recipeTitleText"
+                            app:layout_constraintLeft_toLeftOf="parent" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:orientation="horizontal"
+                            android:id="@+id/recipeIngredientRecycler"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginRight="24dp"
+                            android:layout_marginLeft="24dp"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            app:layout_constraintTop_toBottomOf="@id/recipeIngredientTitleText"
+                            tools:listitem="@layout/item_recipe_create_ingredient" />
+
+                        <TextView
+                            android:id="@+id/recipeDescribeText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            android:layout_marginLeft="36dp"
+                            android:text="@{viewModel.recipe.description}"
+                            android:textSize="16sp"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/notosanskrm"
+                            android:includeFontPadding="false"
+                            app:layout_constraintTop_toBottomOf="@id/recipeIngredientRecycler"
+                            app:layout_constraintLeft_toLeftOf="parent" />
+
+                        <TextView
+                            android:id="@+id/recipeOrderTitleText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            android:layout_marginLeft="24dp"
+                            android:text="Recipe"
+                            android:textSize="24sp"
+                            android:textColor="@color/primary"
+                            android:fontFamily="@font/robotomedium"
+                            app:layout_constraintTop_toBottomOf="@id/recipeDescribeText"
+                            app:layout_constraintLeft_toLeftOf="parent" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recipeOrderRecycler"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/item_recipe_order"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/recipeOrderTitleText" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
