--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,101 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.account.WelcomeActivity"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/chef_cooking_restaurant_kitchen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#73640707"/>
-    <TextView
-        android:id="@+id/welcomeHello"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:layout_marginLeft="55dp"
-        android:text="Hello"
-        android:textColor="#ffffff"
-        android:textSize="70sp"
-        android:fontFamily="@font/robotoregular"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="welcome to java"
-        android:textSize="20sp"
-        android:textColor="#bebebe"
-        app:layout_constraintTop_toBottomOf="@id/welcomeHello"
-        app:layout_constraintLeft_toLeftOf="@id/welcomeHello"/>
+        tools:context=".ui.account.WelcomeActivity">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/welcomeLogIn"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="24dp"
-        android:background="@drawable/background_radius_20_primary"
-        android:text="Log in"
-        android:textSize="24sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/robotobold"
-        android:elevation="5dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/welcomeSignUp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/chef_cooking_restaurant_kitchen"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/welcomeSignUp"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="115dp"
-        android:layout_marginLeft="24dp"
-        android:background="@drawable/background_radius_20_white"
-        android:text="Sign Up"
-        android:textSize="24sp"
-        android:textColor="@color/primary"
-        android:fontFamily="@font/robotobold"
-        android:elevation="5dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/welcomeBar"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#73640707" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="find password"
-        android:textSize="15sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/notosanskrr"
-        android:includeFontPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/welcomeSignUp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-    
-    <View
-        android:id="@+id/welcomeBar"
-        android:layout_width="180dp"
-        android:layout_height="5dp"
-        android:layout_marginBottom="18dp"
-        android:background="@drawable/background_radius_20_white"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        <TextView
+            android:id="@+id/welcomeHello"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="140dp"
+            android:layout_marginLeft="55dp"
+            android:text="Hello"
+            android:textColor="#ffffff"
+            android:textSize="70sp"
+            android:fontFamily="@font/robotoregular"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="welcome to java"
+            android:textSize="20sp"
+            android:textColor="#bebebe"
+            app:layout_constraintTop_toBottomOf="@id/welcomeHello"
+            app:layout_constraintLeft_toLeftOf="@id/welcomeHello" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/welcomeLogInButton"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="24dp"
+            android:background="@drawable/background_radius_20_primary"
+            android:text="Log in"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/robotobold"
+            android:elevation="5dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/welcomeSignUpButton"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/welcomeSignUpButton"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="115dp"
+            android:layout_marginLeft="24dp"
+            android:background="@drawable/background_radius_20_white"
+            android:text="Sign Up"
+            android:textSize="24sp"
+            android:textColor="@color/primary"
+            android:fontFamily="@font/robotobold"
+            android:elevation="5dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/welcomeBar"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <TextView
+            android:id="@+id/welcomeFindPasswordButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="find password"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/notosanskrr"
+            android:includeFontPadding="false"
+            app:layout_constraintTop_toBottomOf="@id/welcomeSignUpButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <View
+            android:id="@+id/welcomeBar"
+            android:layout_width="180dp"
+            android:layout_height="5dp"
+            android:layout_marginBottom="18dp"
+            android:background="@drawable/background_radius_20_white"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
