--- a/app/src/main/res/layout/activity_recipe_create.xml
+++ b/app/src/main/res/layout/activity_recipe_create.xml
@@ -43,6 +43,7 @@
                         app:layout_constraintLeft_toLeftOf="parent">
 
                         <ImageView
+                            android:id="@+id/recipeCreateBackButton"
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
