--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,8 @@
             android:id="@+id/loginBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_backbutton_white"
+            android:background="#00000000"
             android:layout_marginTop="65dp"
             android:layout_marginLeft="24dp"
             app:layout_constraintTop_toTopOf="parent"
