--- a/app/src/main/res/layout/activity_sign_up_1.xml
+++ b/app/src/main/res/layout/activity_sign_up_1.xml
@@ -21,6 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="65dp"
+            android:src="@drawable/ic_backbutton"
+            android:background="#00000000"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
