--- a/app/src/main/res/layout/activity_sign_up_1.xml
+++ b/app/src/main/res/layout/activity_sign_up_1.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosanskrr"
                 android:includeFontPadding="false"
-                android:text="welcome to java"
+                android:text="welcome to App:ple Pi"
                 android:textColor="#646464"
                 android:textSize="20sp"
                 app:layout_constraintLeft_toLeftOf="@id/signUpTitle"
